deps/v8/test/message/fail/modules-star-default.out
*modules-import4.mjs:6: SyntaxError: The requested module 'modules-import4.mjs' does not provide an export named 'c'
export {c as a} from "modules-import4.mjs";
        ^^^^^^
SyntaxError: The requested module 'modules-import4.mjs' does not provide an export named 'c'

